--- a/app/public/home.html
+++ b/app/public/home.html
@@ -5,16 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Friend Finder</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <script src="main.js"></script>
 </head>
 <body>
 
     <div class="container">
 
         <div class="jumbotron">
-          <h1><i class="fa fa-facebook-square" aria-hidden="true"></i> Friend Finder</h1>
+          <h1>Friend Finder</h1>
           <hr>
           <h2>So no one told you life was gonna be this way....</h2>
           <h2>Answer a few basic questions, then find your best Friend!</h2>
